force-app/main/default/objects/Job_Posting__c/Job_Posting__c.object-meta.xml
<CustomObject>
    <label>Job Posting</label>
    <nameField>
        <displayFormat>JR# {00000}</displayFormat>
        <label>Job Posting Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>