force-app/main/default/objects/Job_Posting__c/fields/Is_Remote__c.field-meta.xml
<CustomField>
    <fullName>Is_Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Remote?</label>
    <type>Checkbox</type>
</CustomField>