force-app/main/default/objects/Job_Posting__c/fields/Job_Details__c.field-meta.xml
<CustomField>
    <fullName>Job_Details__c</fullName>
    <label>Job Details</label>
    <length>130044</length>
    <type>LongTextArea</type>
</CustomField>