force-app/main/default/objects/Job_Posting__c/fields/Preferred_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Qualifications__c</fullName>
    <label>Preferred Qualifications</label>
    <length>122768</length>
    <type>LongTextArea</type>
</CustomField>