force-app/main/default/objects/Job_Posting__c/fields/Preferred_Skills__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Skills__c</fullName>
    <label>Preferred Skills</label>
    <length>122768</length>
    <type>LongTextArea</type>
</CustomField>