force-app/main/default/objects/Job_Posting__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <label>Years of Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1 Year</fullName>
            </value>
            <value>
                <fullName>1-2 Years</fullName>
            </value>
            <value>
                <fullName>2-3 Years</fullName>
            </value>
            <value>
                <fullName>3-4 Years</fullName>
            </value>
            <value>
                <fullName>4-5 Years</fullName>
            </value>
            <value>
                <fullName>&gt;5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>