force-app/main/default/objects/Job_Posting__c/recordTypes/Applicant.recordType-meta.xml
<RecordType>
    <fullName>Applicant</fullName>
    <active>false</active>
    <label>Applicant</label>
</RecordType>