force-app/main/default/objects/Job_Posting__c/recordTypes/Recruiter.recordType-meta.xml
<RecordType>
    <fullName>Recruiter</fullName>
    <active>true</active>
    <label>Recruiter</label>
</RecordType>